--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <div class="aaa"><img src="./eisenhower-matrix.jpg">
+  <div class="main-img"><img src="./eisenhower-matrix.jpg">
     <a class="more-inf" 
        href="https://goal-life.com/page/method/matrix-eisenhower">
        Want more details&quest;</a>
