--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        href="https://goal-life.com/page/method/matrix-eisenhower">
        Want more details&quest;</a>
   </div>
-  <div class="centered-main-page-element">
+  <div class="main-wrap">
     <p>
       <label for="new-task">Add Item</label>
     <div class="task-row-wrapper">
