--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Todo App</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
@@ -7,20 +8,20 @@
 </head>
 
 <body class="body">
-  <div class="main-img"><img src="./eisenhower-matrix.jpg">
-    <a class="more-inf" 
-       href="https://goal-life.com/page/method/matrix-eisenhower">
-       Want more details&quest;
+  <section class="main-img">
+    <img src="./eisenhower-matrix.jpg">
+    <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">
+      Want more details&quest;
     </a>
-  </div>
-  <div class="main-wrap">
-    <p>
+  </section>
+  <section class="main-wrap">
+    <div>
       <label class="label" for="new-task">Add Item</label>
-    <div class="task-row-wrapper">
-      <input id="new-task" class="input task" type="text">
-      <button class="button">Add</button>
+      <div class="task-row-wrapper">
+        <input id="new-task" class="input task" type="text">
+        <button class="button">Add</button>
+      </div>
     </div>
-    </p>
     <h3 class="text-title">Todo</h3>
     <ul class="menu-tasks" id="incomplete-tasks">
       <li class="menu-item">
@@ -48,7 +49,7 @@
         <button class="button delete"><img class="img" src="./remove.svg"></button>
       </li>
     </ul>
-  </div>
+  </section>
   <script type="text/javascript" src="app.js"></script>
 </body>
 
