--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body class="body">
   <section class="main-img">
-    <img src="./eisenhower-matrix.jpg">
+    <img src="./eisenhower-matrix.jpg" alt="matrix">
     <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">
       Want more details&quest;
     </a>
@@ -29,14 +29,14 @@
         <label class="label task">Pay Bills</label>
         <input type="text" class="input task">
         <button class="button edit">Edit</button>
-        <button class="button delete"><img class="img" src="./remove.svg"></button>
+        <button class="button delete"><img class="img" src="./remove.svg" alt="remove"></button>
       </li>
       <li class="menu-item edit-mode">
         <input type="checkbox" class="input">
         <label class="label task">Go Shopping</label>
         <input type="text" value="go shopping" class="input task">
         <button class="button edit">Save</button>
-        <button class="button delete"><img class="img" src="./remove.svg"></button>
+        <button class="button delete"><img class="img" src="./remove.svg" alt="remove"></button>
       </li>
     </ul>
     <h3 class="text-title">Completed</h3>
@@ -46,7 +46,7 @@
         <label class="label task">See the Doctor</label>
         <input type="text" class="input task">
         <button class="button edit">Edit</button>
-        <button class="button delete"><img class="img" src="./remove.svg"></button>
+        <button class="button delete"><img class="img" src="./remove.svg" alt="remove"></button>
       </li>
     </ul>
   </section>
